--- a/index.css
+++ b/index.css
@@ -1,45 +1,33 @@
 
 html {
-    background: url(images/ancientDragon.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(images/ancientDragon.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
-    background-color: black;
-} 
-
-.container  {
-    background-color: rgba(20,20,50,.7);
-    width: 50%;
-    display: float;
-    margin: 0 auto;
+    background-position: center;
     height: 100vh;
-    /* border-top: 0; */
-    /* border-top: 0%; */
-    /* border-top: 50%; */
-    /* padding: 100, 50, 100, 50; */
-    /* height: 100%; */
-    /* align-items: stretch; */
-    /* margin: 50%, 25%, 25%, 50%; */
-    
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+  }
 
-
-
-    /* margin-top: 0; */
-}
-
-h1  {
-    font-size: 50px;
+  .container {
+    text-align: center;
+    width: 73%;
+  }
+  
+  .container > p {
+    font-size: 25px;
+    color: #dcdde1;
+  }
+  
+  .container > h1 {
+    color: #282519;
     text-decoration: underline;
-    text-align: center;
-}
-
-h2  {
-    text-align: center;
-    font-size: 30px;
-}
-
-.hyperlink   {
-    color: rgb(236, 19, 45);
+  }
+  
+  .hyperlink {
+    color: rgb(185, 14, 54);
+    font-weight: bolder;
     cursor: pointer;
-}
+  } 
