--- a/rps.css
+++ b/rps.css
@@ -14,10 +14,14 @@ h1  {
     text-align: center;
 }
 
-#weapons    {
+.weapons    {
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.weapons > img {
+    cursor: pointer;
 }
