--- a/rps.css
+++ b/rps.css
@@ -8,20 +8,37 @@ html {
     background-color: black;
 } 
 
+
 h1  {
+    color: #282519;
     font-size: 50px;
     text-decoration: underline;
     text-align: center;
 }
 
-.weapons    {
-    width: 100%;
+
+#weapons    {
+    height: 100vh;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-evenly; 
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
-.weapons > img {
+
+#weapons > img {
+    width: 150px;
+    height: 150px;
+    border: 5px solid grey;
+    padding: 5px;
+    cursor: pointer;
+}
+
+
+#button {
+    font-size: 150%;
+    color:black;
+    background-color: grey;
+    margin-top: 30px;
     cursor: pointer;
 }
